--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        python setup.py
     - name: Analysing the code with pylint
       run: |
         pylint `find "$(pwd)" -name '*.py'`
